--- a/txt_validate.html
+++ b/txt_validate.html
@@ -67,6 +67,7 @@
                 }
             });
             $("#btnsub").click(function(){
+                confirm("are u sure?");
                 alert("Form Submitted Successfully");
             });
 
